--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burger king</title>
+    <title>Burger King</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header></header>
     <nav></nav>
-    <main></main>
-    <footer></footer>    
+    <main>
+        <h1 class="main__title"> Browse The Range</h1>
+        <p class="main__subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, corporis.</p>
+        <div class="main__img">
+            <div > <img class="img1" src="img1.jpg" alt="Bu yerda rasm bor"></div>
+            <div > <img class="img2" src="img2.jpg" alt="Bu yerda rasm bor"></div>
+            <div > <img class="img3" src="img3.jpg" alt="Bu yerda rasm bor"></div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
